fix overflow

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -51,19 +51,21 @@ body.dark {
 
 code[class*="language-"],
 pre[class*="language-"] {
-  color: #f8f8f2;
+  color: black;
   background: none;
-  font-family: "Fira Code", Consolas, Monaco, "Andale Mono", "Ubuntu Mono",
-    monospace;
+  font-family: Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
+  font-size: 0.85rem;
   text-align: left;
   white-space: pre;
   word-spacing: normal;
   word-break: normal;
   word-wrap: normal;
   line-height: 1.5;
+
   -moz-tab-size: 4;
   -o-tab-size: 4;
   tab-size: 4;
+
   -webkit-hyphens: none;
   -moz-hyphens: none;
   -ms-hyphens: none;
@@ -72,90 +74,103 @@ pre[class*="language-"] {
 
 /* Code blocks */
 pre[class*="language-"] {
-  padding: 1em;
+  position: relative;
+  border-left: 10px solid #358ccb;
+  box-shadow: -1px 0 0 0 #358ccb, 0 0 0 1px #dfdfdf;
+  background-color: #fdfdfd;
+  background-image: linear-gradient(
+    transparent 50%,
+    rgba(69, 142, 209, 0.04) 50%
+  );
+  background-size: 3em 3em;
+  background-origin: content-box;
+  background-attachment: local;
   margin: 0.5em 0;
-  overflow: auto;
-  border-radius: 0.3em;
+  padding: 0 1em;
 }
 
-:not(pre) > code[class*="language-"],
-pre[class*="language-"] {
-  background: #2e3440;
+pre[class*="language-"] > code {
+  display: block;
 }
 
 /* Inline code */
 :not(pre) > code[class*="language-"] {
-  padding: 0.2em 0.4em;
-  border-radius: 0.3em;
+  position: relative;
+  padding: 0.2em 0.3em;
+  border-radius: 0.2em;
+  color: #c92c2c;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  display: inline;
   white-space: normal;
+  background-color: #fdfdfd;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .token.comment,
+.token.block-comment,
 .token.prolog,
 .token.doctype,
 .token.cdata {
-  color: #636f88;
+  color: #7d8b99;
 }
 
 .token.punctuation {
-  color: #81a1c1;
-}
-
-.namespace {
-  opacity: 0.7;
+  color: #5f6364;
 }
 
 .token.property,
 .token.tag,
+.token.boolean,
+.token.number,
+.token.function-name,
 .token.constant,
 .token.symbol,
 .token.deleted {
-  color: #81a1c1;
-}
-
-.token.number {
-  color: #b48ead;
-}
-
-.token.boolean {
-  color: #81a1c1;
+  color: #c92c2c;
 }
 
 .token.selector,
 .token.attr-name,
 .token.string,
 .token.char,
+.token.function,
 .token.builtin,
 .token.inserted {
-  color: #a3be8c;
+  color: #2f9c0a;
 }
 
 .token.operator,
 .token.entity,
 .token.url,
-.language-css .token.string,
-.style .token.string,
 .token.variable {
-  color: #81a1c1;
+  color: #a67f59;
+  background: rgba(255, 255, 255, 0.5);
 }
 
 .token.atrule,
 .token.attr-value,
-.token.function,
+.token.keyword,
 .token.class-name {
-  color: #88c0d0;
-}
-
-.token.keyword {
-  color: #81a1c1;
+  color: #1990b8;
 }
 
 .token.regex,
 .token.important {
-  color: #ebcb8b;
+  color: #e90;
 }
 
-.token.important,
+.language-css .token.string,
+.style .token.string {
+  color: #a67f59;
+  background: rgba(255, 255, 255, 0.5);
+}
+
+.token.important {
+  font-weight: normal;
+}
+
 .token.bold {
   font-weight: bold;
 }
@@ -166,6 +181,10 @@ pre[class*="language-"] {
 
 .token.entity {
   cursor: help;
+}
+
+.token.namespace {
+  opacity: 0.7;
 }
 
 /*  */
